Changed the team section icons and their hover colors

--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -1163,7 +1163,7 @@ tems Section style
     font-size:16px;
 }
 .teams_item ul li a:hover i{
-    color:#fddc57;
+    color:#cc7a30;
 }
 /*team Skill bar*/
 .teamskillbar {
