Changed the bg color of the mission statement page

--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -124,7 +124,7 @@ section { overflow: hidden; }
 .bg-grey{background-color: #fcfbf7;}
 .bg-black{background-color: #222222;}
 .bg-white{background-color: #fff;}
-.bg-yellow{background-color: #fddc57;}
+.bg-yellow{background-color: #d49436;}
 
 img {
     -moz-user-select: none;
