--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -105,11 +105,11 @@ section { overflow: hidden; }
 .text-finence{color:#13A0B2 !important;;}
 .text-mega{color:#00a885 !important;;}
 .text-white{color:#fff !important;;}
-.text-mission{color:#001F3F  !important;
+.text-mission{color:#bbd3ea  !important;
 font-size: 35px !important}
-.text-yellow{
-    color:#fddc57;
-}
+.text-yellow{color:#fddc57;}
+.text-and{color:#3a1515  !important;}
+.text-vision {color:#f7fafd  !important}
 
 .disabled{
     cursor: not-allowed;
@@ -127,6 +127,17 @@ font-size: 35px !important}
 .bg-white{background-color: #fff;}
 .bg-yellow{background-color: #fddc57;}
 .mission{background-color: #d49436;}
+
+.bg-video {
+    margin-top: 53.5%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+    z-index: 0;
+}
 
 img {
     -moz-user-select: none;
