made changes to the four images in the featured section

--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -139,6 +139,10 @@ font-size: 35px !important}
     z-index: 0;
 }
 
+.featured-image {
+    width: 40px;
+}
+
 img {
     -moz-user-select: none;
     -webkit-user-select: none;
