re-changed some of the classes that had influenced unwanted elements

--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -155,6 +155,10 @@ img {
     -webkit-user-drag: none;
     -user-drag: none;
 }
+
+.img-circle {
+    border-radius: 50%;
+}
 a,
 a:hover,
 a:active,
