--- a/LandingPage/assets/css/style.css
+++ b/LandingPage/assets/css/style.css
@@ -1423,6 +1423,13 @@ tems Section style
 
 
 /*Footer section*/
+.footer {
+    background-color: #3a1515;
+}
+
+.main_footer {
+    background-color: #3a1515;
+}
 .divider{
     width:100%;
     height: 1px;
