--- a/landing-page-2/assets/css/main.css
+++ b/landing-page-2/assets/css/main.css
@@ -1892,7 +1892,9 @@ section,
 .services {
   padding: 80px 0;
 }
-
+#stats{
+  background-color: rgb(228, 228, 193);
+}
 .services .intro-content .section-badge {
   display: inline-flex;
   align-items: center;
